(dirty) profiles for testing on hudson