@@ -190,6 +190,7 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>prepare-dependencies</id>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -236,4 +237,295 @@
             </plugin>
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>hudson-invm</id>
+            <activation>
+                <property>
+                    <name>transport</name>
+                    <value>IN-VM</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>jaxws-ri</artifactId>
+                    <version>${project.version}</version>
+                    <type>zip</type>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-dependencies</id>
+                                <goals>
+                                    <goal>unpack-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>target/tested-ri</outputDirectory>
+                                    <includeArtifactIds>jaxws-ri</includeArtifactIds>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>jaxws-unit-tests</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration combine.self="override">
+                                    <target>
+                                        <property name="ri.endorsed.dir" value="target/tested-ri/jaxws-ri/lib1"/>
+                                        <mkdir dir="${ri.endorsed.dir}"/>
+                                        <copy todir="${ri.endorsed.dir}">
+                                            <fileset dir="target/tested-ri/jaxws-ri/lib" includes="jaxb-api.jar,jaxws-api.jar,saaj-api.jar"/>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>exec</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <arguments>
+                                        <argument>-XX:MaxPermSize=128M</argument>
+                                        <argument>-Xmx128m</argument>
+                                        <argument>-Djava.endorsed.dirs=${project.basedir}/target/tested-ri/jaxws-ri/lib1</argument>
+                                        <argument>-Dhttp.proxyHost=www-proxy.us.oracle.com</argument>
+                                        <argument>-Dhttp.proxyPort=80</argument>
+                                        <argument>-Dhttps.proxyHost=www-proxy.us.oracle.com</argument>
+                                        <argument>-Dhttps.proxyPort=80</argument>
+                                        <argument>-jar</argument>
+                                        <argument>${project.basedir}/lib/harness.jar</argument>
+                                        <argument>-version</argument>
+                                        <argument>${project.osgi.version}</argument>
+                                        <argument>-report</argument>
+                                        <argument>${project.basedir}/target/junit-reports</argument>
+                                        <argument>-cp:jaxws-image</argument>
+                                        <argument>${project.basedir}/target/tested-ri/jaxws-ri</argument>
+                                        <argument>-r</argument>
+                                        <argument>${project.basedir}/testcases</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>hudson-lwhs</id>
+            <activation>
+                <property>
+                    <name>transport</name>
+                    <value>LWHS</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>jaxws-ri</artifactId>
+                    <version>${project.version}</version>
+                    <type>zip</type>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-dependencies</id>
+                                <goals>
+                                    <goal>unpack-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>target/tested-ri</outputDirectory>
+                                    <includeArtifactIds>jaxws-ri</includeArtifactIds>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>jaxws-unit-tests</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration combine.self="override">
+                                    <target>
+                                        <property name="ri.endorsed.dir" value="target/tested-ri/jaxws-ri/lib1"/>
+                                        <mkdir dir="${ri.endorsed.dir}"/>
+                                        <copy todir="${ri.endorsed.dir}">
+                                            <fileset dir="target/tested-ri/jaxws-ri/lib" includes="jaxb-api.jar,jaxws-api.jar,saaj-api.jar"/>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>exec</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <arguments>
+                                        <argument>-XX:MaxPermSize=128M</argument>
+                                        <argument>-Xmx128m</argument>
+                                        <argument>-Djava.endorsed.dirs=${project.basedir}/target/tested-ri/jaxws-ri/lib1</argument>
+                                        <argument>-Dhttp.proxyHost=www-proxy.us.oracle.com</argument>
+                                        <argument>-Dhttp.proxyPort=80</argument>
+                                        <argument>-Dhttps.proxyHost=www-proxy.us.oracle.com</argument>
+                                        <argument>-Dhttps.proxyPort=80</argument>
+                                        <argument>-jar</argument>
+                                        <argument>${project.basedir}/lib/harness.jar</argument>
+                                        <argument>-version</argument>
+                                        <argument>${project.osgi.version}</argument>
+                                        <argument>-report</argument>
+                                        <argument>${project.basedir}/target/junit-reports</argument>
+                                        <argument>-cp:jaxws-image</argument>
+                                        <argument>${project.basedir}/target/tested-ri/jaxws-ri</argument>
+                                        <argument>-r</argument>
+                                        <argument>-lwhs</argument>
+                                        <argument>${project.basedir}/testcases</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>hudson-tomcat</id>
+            <activation>
+                <property>
+                    <name>transport</name>
+                    <value>TOMCAT</value>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>${project.groupId}</groupId>
+                    <artifactId>jaxws-ri</artifactId>
+                    <version>${project.version}</version>
+                    <type>zip</type>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>unpack-dependencies</id>
+                                <goals>
+                                    <goal>unpack-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>target/tested-ri</outputDirectory>
+                                    <includeArtifactIds>jaxws-ri</includeArtifactIds>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>jaxws-unit-tests</id>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration combine.self="override">
+                                    <target>
+                                        <property name="ri.endorsed.dir" value="target/tested-ri/jaxws-ri/lib1"/>
+                                        <mkdir dir="${ri.endorsed.dir}"/>
+                                        <copy todir="${ri.endorsed.dir}">
+                                            <fileset dir="target/tested-ri/jaxws-ri/lib" includes="jaxb-api.jar,jaxws-api.jar,saaj-api.jar"/>
+                                        </copy>
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>exec</id>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <arguments>
+                                        <argument>-XX:MaxPermSize=128M</argument>
+                                        <argument>-Xmx128m</argument>
+                                        <argument>-Djava.endorsed.dirs=${project.basedir}/target/tested-ri/jaxws-ri/lib1</argument>
+                                        <argument>-Dhttp.proxyHost=www-proxy.us.oracle.com</argument>
+                                        <argument>-Dhttp.proxyPort=80</argument>
+                                        <argument>-Dhttps.proxyHost=www-proxy.us.oracle.com</argument>
+                                        <argument>-Dhttps.proxyPort=80</argument>
+                                        <argument>-jar</argument>
+                                        <argument>${project.basedir}/lib/harness.jar</argument>
+                                        <argument>-version</argument>
+                                        <argument>${project.osgi.version}</argument>
+                                        <argument>-report</argument>
+                                        <argument>${project.basedir}/target/junit-reports</argument>
+                                        <argument>-cp:jaxws-image</argument>
+                                        <argument>${project.basedir}/target/tested-ri/jaxws-ri</argument>
+                                        <argument>-r</argument>
+                                        <argument>-tomcat-embedded</argument>
+                                        <argument>${tomcat.home}</argument>
+                                        <argument>${project.basedir}/testcases</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
